--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
     "react-select-country-list": "^2.2.3",
+    "react-simple-captcha": "^8.2.6",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.0.1"
