--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^8.3.1",
     "flag-icon-css": "^4.1.7",
     "flag-icons": "^6.0.2",
+    "mdbreact": "^5.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
